# prescribed_fires

./: .gitignore  CITATION.cff  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  weighting.py
R/: feols_R.R  smoke_link.R
analysis/: README.md  analysis.ipynb  extract_to_feather.ipynb  makoto_overlap.ipynb  plot_data.ipynb  plot_method.ipynb  plot_results.ipynb  plots.ipynb  plots_smoke.ipynb  relative_risk.ipynb  results_figures_replication.ipynb  severity_past.ipynb  simulation.ipynb  simulation_replication.ipynb  spillovers.ipynb  suppression_plots.ipynb  weighting.ipynb  weird_points.ipynb
conf/: balance.yaml  build.yaml  config.yaml  create_template.yaml  discontinuity.yaml  extract.yaml  simulations.yaml  spillovers.yaml  treatments.yaml  tyra.yaml
conf/balancing/: balance.yaml  balance_wild.yaml  spillovers.yaml  spillovers_small.yaml
conf/compute/: linux_machine.yaml  sherlock.yaml
conf/data/: default.yaml
conf/optim/: large_grid.yaml  small_grid.yaml
conf/simulations/: no_spillovers.yaml  spillovers.yaml
conf/tyra/: frp_treats.yaml  frp_treats_all_conf.yaml  mtbs_inmediate_treats.yaml  mtbs_treats.yaml  spillover_treats.yaml  spillover_treats_small.yaml
dashboard/: extract_data.py  index.html
dashboard/css/: style.css
main/: build_dataset.py  build_dataset_distance.py  create_template.py  create_treatments.py  pick_best_models.py  run_discontinuity.py  run_extract.py  run_simulations.py  weighting.py  weighting_spillovers.py  weighting_wilderness.py
src/: cbps_torch.py  run_balancing.py  transform_array.py  utils.py
(+33 files in other folders)
