[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prescribed"
authors = [{name="Ivan Higuera-Mendieta", email="ihigueme@stanford.edu"},
{name="Marshall Burke", email="mburke@stanford.edu"}]
dynamic = ["version"]
readme = {file = "README.txt", content-type = "text/markdown"}
requires-python = ">=3.10"