[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prescribed"
authors = [{name="Ivan Higuera-Mendieta", email="ihigueme@stanford.edu"},
{name="Marshall Burke", email="mburke@stanford.edu"}]
version = "0.0.1"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = "MIT"

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 80

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"
max-doc-length = 80

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
